<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/Background"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/cyan_700"

        />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/foto"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"

         />

    <TextView
        android:id="@+id/texView2"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/cesaralva"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.0"
         />

    <TextView
        android:id="@+id/texView3"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/developer"
        android:textColor="@color/black"
        android:textSize="10sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texView2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/calendario"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/calendario"
        android:gravity="center|left"
        android:hint="@string/fecha"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texView3"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/telefono"
        android:gravity="center|left"
        android:hint="@string/telefono"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texView3"
        app:layout_constraintVertical_bias="0.095" />


    <TextView
        android:id="@+id/casa"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/casa"
        android:gravity="center|left"
        android:hint="@string/casa"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/correo"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/email"
        android:gravity="center|left"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/linkedin"
        android:layout_width="280dp"
        android:layout_height="34dp"
        android:backgroundTint="@color/cyan_700"
        android:drawableStart="@drawable/linkedin"
        android:gravity="center|left"
        android:hint="@string/linkedin"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />


    <EditText
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="78dp"
        android:text="@string/description"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="346dp"
        android:layout_height="310dp"
        android:layout_margin="0dp"
        android:background="@drawable/shadow"
        android:columnCount="2"
        android:elevation="3dp"
        android:rowCount="2"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="78dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="18dp"
                app:srcCompat="@drawable/ic_person"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|fill_horizontal"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="12dp"
                android:text="Experiencie"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/backgraund_cardview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="60dp"
                android:layout_height="46dp"
                android:layout_row="0"

                android:layout_column="3"
                android:layout_gravity="center|clip_vertical|fill_vertical"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/ic_image"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left|center_vertical"
                android:layout_marginStart="21dp"
                android:layout_marginBottom="12dp"
                android:text="Background"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_margin="22dp"
                app:srcCompat="@drawable/ic_favorite"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="10dp"
                android:text="Interest"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="34dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_margin="22dp"
                app:srcCompat="@drawable/portafolio"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="104dp"
                android:layout_height="22dp"
                android:layout_gravity="bottom|clip_horizontal|center_horizontal|fill_horizontal"
                android:layout_marginStart="27dp"
                android:layout_marginBottom="10dp"
                android:text="Portafolio"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>